# orange

./: .gitignore  README.md  README_cn.md  linux_build.py  mac_build.py  package.json  pom.xml  setup.js  win_build.py
.github/workflows/: publish.yml  test-on-pr.yml
fsevent/: pom.xml
fsevent/notify/: Cargo.toml
fsevent/notify/src/: main.rs
public/: index.html
sidecar/: pom.xml
sidecar/src/main/java/com/github/: OrangeServer.java
sidecar/src/main/resources/: resource.json
sidecar/src/test/java/com/github/: FolderTest.java
src/: App.js  CustomStylesGSheets.stories.js  Items.js  PivotIconCountExample.tsx  SearchBox.js  SearchExampleStandard.js  Tab.js  TableExampleCollapsing.js  TagPickerInlineExample.tsx  Theme.js  index.css  index.js  index.tsx  test.js  utils.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: build.rs  file_doc.rs  file_index.rs  file_kv.rs  file_view.rs  fs_walker.rs  fs_watcher.rs  idx_store.rs  index_store.rs  index_store_v2.rs  indexing.rs  kv_store.rs  main.rs  pinyin_tokenizer.rs  reindex_executor.rs  ui.rs  united_store.rs  user_setting.rs  usn_journal_watcher.rs  utils.rs  walk_exec.rs  walk_metrics.rs  watch_exec.rs  watcher_exec.rs  win_walker.rs  win_watcher.rs
src/main/java/com/github/: OrangeServer.java
src/main/java/com/github/accessor/: DbAccessor.java  FileDoc.java  FileDocIterator.java  FileDocSuggester.java  FileView.java  IndexAccessor.java  StatProcessStatus.java
src/main/java/com/github/conf/: AppConf.java  IndexConf.java  LogConf.java
src/main/java/com/github/executor/: AliveExecutor.java  FsStatExecutor.java  NtrIndexExecutor.java
src/main/java/com/github/fshook/: Cmd.java  FsEventQ.java  FsEventQ4notify.java  FsEventQ4watchdog.java  FsEventQTest.java  FsLog.java
src/main/java/com/github/handler/: OrangeHandler.java  OrangeInitializer.java  StaticServerHandler.java
src/main/java/com/github/utils/: FileUtil.java  JsonUtil.java  OsUtil.java  ProcessUtil.java
src/main/proto/: file.proto
src/main/py/: main.py  windows_build.py
src/main/resources/: graal.json  logging.properties  reflection.json
src/main/resources/ik/: main2012.dic
src/main/webapp/: README.md  build.py  package-lock.json  package.json
src/main/webapp/src/: App.css  App.js  SearchExampleStandard.js  StickyExampleAboveContent.js  TabCmpt.js  TableCmpt.css  TableCmpt.js  TableExampleCollapsing.js  index.css  index.js
src/main/webapp/src-tauri/: Cargo.toml  tauri.conf.json
src/main/webapp/src-tauri/icons/: icon.icns
src/main/webapp/src-tauri/src/: main.rs
src/shared/: CustomMaterialMenu.js
src/test/java/com/github/: FolderTest.java  ProcessTest.java
src/test/java/com/github/accessor/: IndexAccessorTest.java
src/test/java/com/github/executor/: FsStatExecutorTest.java
src/test/java/com/github/utils/: ProcessUtilTest.java
ui/: package-lock.json  package.json  pom.xml  proxy.js
ui/public/: index.html
ui/src/: App.js  SearchExampleStandard.js  TableExampleCollapsing.js  index.js
ui/src-tauri/: tauri.conf.json
ui/src-tauri/src/: build.rs  main_linux.rs  main_mac.rs  main_win.rs
(+55 files in other folders)
