[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }
winres = "0.1"

[dependencies]
glob = "0.3.0"
kernel32-sys = "0.2.2"
libc = "0.2.117"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["api-all"] }
crossbeam-channel = "0.4.0"
notify = "4.0.17"
tantivy = "0.15.3"
tantivy-jieba = "0.5.1"
tempfile = "3.3.0"
kv = { version = "0.22.0" ,features = ["json-value"] }
walkdir = "2"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
