[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.4", features = [] }
winres = "0.1"

[dependencies]
log4rs = "0.10.0"
log = { version = "0.4", features = ["std", "serde"] }
chrono = "0.4.19"
dirs = "1.0.4"
kernel32-sys = "0.2.2"
libc = "0.2.117"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.4", features = ["api-all", "system-tray"] }
notify = "4.0.17"
tantivy = "0.15.3"
tantivy-jieba = "0.5.1"
kv = { version = "0.22.0" ,features = ["json-value"] }
walkdir = "2"
windows = { version = "0.29.0", features = [
    "alloc",
    "Win32_Foundation",
    "Win32_System_Time",
    "Win32_System_SystemInformation",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_System_Ioctl"] }
pinyin = "0.9"
directories = "4.0"
jwalk = "0.6.0"


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
